[package]
name = "maglio"
version = "0.1.1"
edition = "2021"
authors = ["Jakob Fischer <jakob@automorph.info>"]
description = "Simple non stable package for 3d maths"
license = "Unlicense"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float="2.8.0"
